Bug 124990 - kde5: unfinished DnD of a sheet erases all contents of the sheet
Summary: kde5: unfinished DnD of a sheet erases all contents of the sheet
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.2.1.2 release
Hardware: All Linux (All)
: high major
Assignee: Katarina Behrens (Inactive)
URL:
Whiteboard: target:6.3.0 target:6.2.4
Keywords: dataLoss
: 125016 (view as bug list)
Depends on:
Blocks: KDE
  Show dependency treegraph
 
Reported: 2019-04-26 20:06 UTC by Mike Kaganski
Modified: 2019-05-06 06:55 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
A screencast of DnD destroying sheet data (3.53 MB, video/x-matroska)
2019-04-26 20:06 UTC, Mike Kaganski
Details
proof (2.00 MB, video/x-matroska)
2019-05-06 06:55 UTC, Vera Blagoveschenskaya
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2019-04-26 20:06:03 UTC
Created attachment 151030 [details]
A screencast of DnD destroying sheet data

0. Start LO using `SAL_USE_VCLPLUGIN=kde5 soffice`
1. Create a new worksheet
3. Put something to current sheet (e.g., "anything" in A1)
4. Start dragging the active sheet by its tab at the bottom
5. Release the mouse

=> all data on current sheet is lost.

If there are several sheets, then DnD would not erase data, *unless* the DnD resulted in the same position (= user decided to not move the sheet to left or right, and let it stay in the current position).

Only reproducible with kde5.

Attached a screencast by original reporter.
Comment 1 Roman Kuznetsov 2019-04-26 20:34:49 UTC
confirm in

Version: 6.2.1.2
Build ID: 7bcb35dc3024a62dea0caee87020152d1ee96e71
CPU threads: 4; OS: Linux 5.0; UI render: default; VCL: kde5; 
Locale: ru-RU (ru_RU.UTF-8); UI-Language: en-US
Calc: threaded
Comment 2 Mike Kaganski 2019-04-29 05:31:19 UTC
*** Bug 125016 has been marked as a duplicate of this bug. ***
Comment 3 Commit Notification 2019-04-29 19:22:36 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/cc6c1798b8d6d9d27dc40145e1ec71dd480c788a%5E%21

tdf#124990: DnD operation can be set to fail in dropComplete

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2019-04-30 21:47:43 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/058537c95d172b4cb1256c1c6542860f4712cf21%5E%21

tdf#124990: DnD operation can be set to fail in dropComplete

It will be available in 6.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Mike Kaganski 2019-05-01 03:43:24 UTC
@bubli: thank you for the fix!
Comment 6 Vera Blagoveschenskaya 2019-05-06 06:55:07 UTC
Hi all.
I've checked this fix for 

Version: 6.3.0.0.alpha0+
Build ID: 98630a0bd49bd80652145a21e4e0d0ded792b36b
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: kde5; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2019-05-04_04:44:35
Locale: ru-RU (ru_RU.UTF-8); UI-Language: en-US
Calc: threaded

(with the #tdf123859)

--> No dataloss now. Thx a lot!
Pls see video in the attachment.

PS: I don't like how DnD works :( scrolling is not smooth. Should I create a new bug for this?
Comment 7 Vera Blagoveschenskaya 2019-05-06 06:55:34 UTC
Created attachment 151195 [details]
proof